# iot_project

./: .gitignore  CMakeLists.txt  FRONTEND_SETUP.md  README copy.md  README.md  frontend.Dockerfile
.github/workflows/: esp32c6-OTA.yml  esp32c6-firmware.yml
backend/: .env.template  README.md  docker-compose.yml
backend/actuation/: Dockerfile  ML.py  actuation.py  dummy_actuation.py  polling_rate.py  requirements.txt
backend/actuation/data/: synthetic_weather_with_flood_labels.csv
backend/actuation/model/: flood_model.joblib
backend/mosquitto/config/: acl  (+1 more)
backend/provisioner/: Dockerfile  provisioner.py
backend/publisher/: Dockerfile  publisher.py  requirements.txt
backend/scripts/: generate-certs.sh
backend/subscriber/: Dockerfile  subscriber.py
backend/tests/: test_scenarios.py
docs/: SETUP_KEYS.md
embedded_systems/: README.md
embedded_systems/esp-eye/: CMakeLists.txt  README.md
embedded_systems/esp32c6/: CMakeLists.txt  README.md  final_packet.json  partitions.csv  sdkconfig
embedded_systems/esp32c6/main/: CMakeLists.txt  Kconfig.projbuild  ble_client.c  ble_client.h  cloud_api.h  credentials.h  image_encoder.c  image_encoder.h  image_reassembly.c  image_reassembly.h  main.c  nvs.csv  ota.c  ota.h  pump.c  pump.h  raindrop_sensor.c  raindrop_sensor.h  sensor_packet.c  sensor_packet.h  servo.c  servo.h  water_sensor.c  water_sensor.h  x.json
frontend/: README.md  frontend.Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue
main/: CMakeLists.txt  credentials.h.example  main.c  water_sensor_main.c
(+10 files in other folders)
